[package]
name = "height_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version="0.8", default-features = false}
bevy-inspector-egui = "0.13.0"
image = "0.24.3"
palette = "0.6.1"
num-traits = "0.2.15"